--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Services - JKagiDesigns LLC</title>
+        <title>Pricing - JKagiDesigns LLC</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
@@ -18,8 +18,8 @@
                 </a>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="services.html" class="nav-link active">Services</a></li>
-                    <li><a href="pricing.html" class="nav-link">Pricing</a></li>
+                    <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li><a href="pricing.html" class="nav-link active">Pricing</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                     <li><a href="rss.html" class="nav-link">News Feed</a></li>
                 </ul>
@@ -34,75 +34,13 @@
         <!-- Page Header -->
         <section class="page-header">
             <div class="container">
-                <h1>Our Services</h1>
-                <p>Professional IT solutions tailored to your business needs</p>
+                <h1>Pricing Plans</h1>
+                <p>Transparent pricing for all our professional IT services</p>
             </div>
         </section>
 
-        <!-- Services Grid -->
-        <section class="services-section">
-            <div class="container">
-                <div class="services-intro">
-                    <h2 class="section-title">What We Offer</h2>
-                    <p>From custom software development to cloud solutions, we provide comprehensive IT services to help
-                        your business thrive in the digital age.</p>
-                </div>
-
-                <div class="services-grid">
-                    <div class="service-item">
-                        <div class="service-icon">🌐</div>
-                        <h3>Web Development</h3>
-                        <p>Custom websites and web applications built with modern technologies. Responsive, fast, and
-                            user-friendly.</p>
-                    </div>
-                    <div class="service-item">
-                        <div class="service-icon">📱</div>
-                        <h3>Mobile Apps</h3>
-                        <p>Native and cross-platform mobile applications for iOS and Android that deliver exceptional
-                            user experiences.</p>
-                    </div>
-                    <div class="service-item">
-                        <div class="service-icon">☁️</div>
-                        <h3>Cloud Solutions</h3>
-                        <p>Cloud migration, deployment, and management services to help you leverage the power of cloud
-                            computing.</p>
-                    </div>
-                    <div class="service-item">
-                        <div class="service-icon">🔒</div>
-                        <h3>Cybersecurity</h3>
-                        <p>Comprehensive security assessments, implementation, and monitoring to protect your digital
-                            assets.</p>
-                    </div>
-                    <div class="service-item">
-                        <div class="service-icon">📊</div>
-                        <h3>Data Analytics</h3>
-                        <p>Transform your data into actionable insights with our advanced analytics and business
-                            intelligence solutions.</p>
-                    </div>
-                    <div class="service-item">
-                        <div class="service-icon">🤖</div>
-                        <h3>AI & Automation</h3>
-                        <p>Implement artificial intelligence and automation solutions to streamline operations and boost
-                            productivity.</p>
-                    </div>
-                    <div class="service-item">
-                        <div class="service-icon">🔧</div>
-                        <h3>Computer Repair / Support</h3>
-                        <p>Professional computer repair, troubleshooting, and technical support services for businesses
-                            and individuals.</p>
-                    </div>
-                    <div class="service-item">
-                        <div class="service-icon">🌐</div>
-                        <h3>Residential Networking</h3>
-                        <p>Home network setup, Wi-Fi optimization, smart home integration, and residential IT
-                            infrastructure solutions.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Website Pricing Highlight -->
-        <section class="pricing-section">
+        <!-- Website Development Pricing -->
+        <section class="pricing-section" id="website-development">
             <div class="container">
                 <h2 class="section-title">Website Development Pricing</h2>
                 <p class="pricing-subtitle">Professional web design packages with ongoing hosting support</p>
@@ -185,17 +123,14 @@
                             Premium (4-6 weeks)</em></p>
                     <p style="margin-top: 0.5rem;">Monthly fees billed annually for 10% discount. Free migration from
                         existing sites.</p>
-                    <p style="margin-top: 1rem;">Looking for pricing on our other services? <a href="pricing.html"
-                            style="color: var(--primary-color); text-decoration: none; font-weight: 600;">View complete
-                            pricing for all services →</a></p>
                 </div>
             </div>
         </section>
 
-        <!-- Software Development Pricing Highlight -->
-        <section class="pricing-section">
+        <!-- Software Development Pricing -->
+        <section class="pricing-section" id="software-development">
             <div class="container">
-                <h2 class="section-title">Software Development Pricing</h2>
+                <h2 class="section-title">Software Development</h2>
                 <p class="pricing-subtitle">Custom software solutions with professional hosting and support</p>
 
                 <div class="pricing-grid">
@@ -274,15 +209,12 @@
                             Premium (8-16 weeks)</em></p>
                     <p style="margin-top: 0.5rem;">Additional engineering hours billed at $120/hr. Monthly hosting fees
                         billed annually for 10% discount.</p>
-                    <p style="margin-top: 1rem;">Looking for pricing on our other services? <a href="pricing.html"
-                            style="color: var(--primary-color); text-decoration: none; font-weight: 600;">View complete
-                            pricing for all services →</a></p>
                 </div>
             </div>
         </section>
 
-        <!-- Computer/IT Services Pricing Highlight -->
-        <section class="pricing-section">
+        <!-- Computer & IT Services Pricing -->
+        <section class="pricing-section" id="computer-it-services">
             <div class="container">
                 <h2 class="section-title">Computer & IT Services Pricing</h2>
                 <p class="pricing-subtitle">Professional computer repair and technical support with transparent pricing
@@ -331,9 +263,51 @@
                         at $99.99 total).</p>
                     <p style="margin-top: 0.5rem;">All services include a 30-day satisfaction guarantee. Members get up
                         to 20% off one-time services.</p>
-                    <p style="margin-top: 1rem;">Looking for pricing on our other services? <a href="pricing.html"
-                            style="color: var(--primary-color); text-decoration: none; font-weight: 600;">View complete
-                            pricing for all services →</a></p>
+                </div>
+            </div>
+        </section>
+
+        <!-- IT Service & Support Membership -->
+        <section class="pricing-section" id="membership">
+            <div class="container">
+                <h2 class="section-title">IT Service & Support Membership</h2>
+                <p class="pricing-subtitle">Annual membership for ongoing IT support and priority service</p>
+
+                <div class="pricing-grid" style="justify-content: center;justify-items: center;">
+                    <!-- Membership Plan -->
+                    <div class="pricing-card featured" style="max-width: 400px;">
+                        <div class="badge">Best Value</div>
+                        <div class="pricing-header">
+                            <h3>Annual IT Support Membership</h3>
+                            <div class="price">
+                                <span class="currency">$</span>
+                                <span class="amount">299</span>
+                                <span class="period">per year</span>
+                            </div>
+                        </div>
+                        <ul class="pricing-features">
+                            <li>✓ Up to 20% off all one-time services</li>
+                            <li>✓ Priority scheduling and support</li>
+                            <li>✓ Free basic diagnostics and consultations</li>
+                            <li>✓ Quarterly system health check-ups</li>
+                            <li>✓ Remote support when possible</li>
+                            <li>✓ No travel fees for in-home services</li>
+                            <li>✓ Emergency support hotline access</li>
+                            <li>✓ Technology purchase recommendations</li>
+                            <li>✓ One free tune-up service per year</li>
+                        </ul>
+                        <a href="contact.html" class="btn btn-primary">Become a Member</a>
+                    </div>
+                </div>
+
+                <div class="pricing-note">
+                    <p><strong>Membership Benefits:</strong> Save hundreds on IT services throughout the year with
+                        priority access and exclusive discounts.</p>
+                    <p style="margin-top: 0.5rem;"><em>Membership valid for 12 months from purchase date. Auto-renewal
+                            available with 30-day notice to cancel.</em></p>
+                    <p style="margin-top: 1rem;">Questions about membership? <a href="contact.html"
+                            style="color: var(--primary-color); text-decoration: none; font-weight: 600;">Contact us for
+                            details →</a></p>
                 </div>
             </div>
         </section>
@@ -341,9 +315,9 @@
         <!-- CTA Section -->
         <section class="cta">
             <div class="container">
-                <h2>Need a Custom Solution?</h2>
-                <p>Let's discuss your specific requirements and create a tailored plan</p>
-                <a href="contact.html" class="btn btn-primary">Contact Us</a>
+                <h2>Ready to Start Your Project?</h2>
+                <p>Let's discuss how we can help your business grow</p>
+                <a href="contact.html" class="btn btn-primary">Contact Us Today</a>
             </div>
         </section>
 
