--- a/rss.html
+++ b/rss.html
@@ -1,96 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Feed - JKagiDesigns LLC</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="index.html" class="logo">JKagiDesigns LLC</a>
-            <ul class="nav-menu">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="services.html" class="nav-link">Services</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
-                <li><a href="rss.html" class="nav-link active">News Feed</a></li>
-            </ul>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </nav>
 
-    <!-- Page Header -->
-    <section class="page-header">
-        <div class="container">
-            <h1>Latest IT & Programming News</h1>
-            <p>Stay updated with the latest trends and news in technology</p>
-        </div>
-    </section>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>News Feed - JKagiDesigns LLC</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
-    <!-- RSS Feed Section -->
-    <section class="rss-section">
-        <div class="container">
-            <div class="feed-controls">
-                <h2>News Sources</h2>
-                <div class="feed-sources">
-                    <button class="feed-btn active" data-feed="all">All Sources</button>
-                    <button class="feed-btn" data-feed="0">TechCrunch</button>
-                    <button class="feed-btn" data-feed="1">Hacker News</button>
-                    <button class="feed-btn" data-feed="2">The Verge</button>
+    <body>
+        <!-- Navigation -->
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="logo">
+                    <img src="assets/images/IconOnly_Transparent.png" alt="JKagiDesigns LLC Logo">
+                    JKagiDesigns LLC
+                </a>
+                <ul class="nav-menu">
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="services.html" class="nav-link">Services</a></li>
+                    <li><a href="pricing.html" class="nav-link">Pricing</a></li>
+                    <li><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li><a href="rss.html" class="nav-link active">News Feed</a></li>
+                </ul>
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
+        </nav>
 
-            <div id="loadingIndicator" class="loading-indicator">
-                <div class="spinner"></div>
-                <p>Loading news feed...</p>
+        <!-- Page Header -->
+        <section class="page-header">
+            <div class="container">
+                <h1>Latest IT & Programming News</h1>
+                <p>Stay updated with the latest trends and news in technology</p>
             </div>
+        </section>
 
-            <div id="feedContainer" class="feed-container">
-                <!-- Feed items will be dynamically inserted here -->
-            </div>
-
-            <div id="errorMessage" class="error-message" style="display: none;">
-                <p>Unable to load news feed. Please try again later.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>JKagiDesigns LLC</h3>
-                    <p>Professional IT Solutions for Modern Business</p>
+        <!-- RSS Feed Section -->
+        <section class="rss-section">
+            <div class="container">
+                <div class="feed-controls">
+                    <h2>News Sources</h2>
+                    <div class="feed-sources">
+                        <button class="feed-btn active" data-feed="all">All Sources</button>
+                        <button class="feed-btn" data-feed="0">TechCrunch</button>
+                        <button class="feed-btn" data-feed="1">Hacker News</button>
+                        <button class="feed-btn" data-feed="2">The Verge</button>
+                    </div>
                 </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="rss.html">News Feed</a></li>
-                    </ul>
+
+                <div id="loadingIndicator" class="loading-indicator">
+                    <div class="spinner"></div>
+                    <p>Loading news feed...</p>
                 </div>
-                <div class="footer-section">
-                    <h4>Contact</h4>
-                    <p>Email: info@jkagidesigns.com</p>
-                    <p>Phone: (555) 123-4567</p>
+
+                <div id="feedContainer" class="feed-container">
+                    <!-- Feed items will be dynamically inserted here -->
+                </div>
+
+                <div id="errorMessage" class="error-message" style="display: none;">
+                    <p>Unable to load news feed. Please try again later.</p>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 JKagiDesigns LLC. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+        </section>
 
-    <script src="script.js"></script>
-    <script src="rss.js"></script>
-</body>
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-section">
+                        <h3>JKagiDesigns LLC</h3>
+                        <p>Professional IT Solutions for Modern Business</p>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Quick Links</h4>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="services.html">Services</a></li>
+                            <li><a href="pricing.html">Pricing</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="rss.html">News Feed</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Contact</h4>
+                        <p>Email: info@jkagidesigns.com</p>
+                        <p>Phone: (555) 123-4567</p>
+                    </div>
+                </div>
+                <div class="footer-bottom">
+                    <p>&copy; 2025 JKagiDesigns LLC. All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
+
+        <script src="script.js"></script>
+        <script src="rss.js"></script>
+    </body>
+
 </html>
