--- a/index.html
+++ b/index.html
@@ -4,7 +4,71 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JKagiDesigns LLC - Professional IT Solutions</title>
+        <title>JKagiDesigns LLC - Professional IT Solutions | Web Development, Software Development & IT Support</title>
+
+        <!-- SEO Meta Tags -->
+        <meta name="description"
+            content="JKagiDesigns LLC provides professional IT solutions including web development, custom software development, and computer IT services. Get expert IT support with transparent pricing and 16+ years of experience.">
+        <meta name="keywords"
+            content="web development, software development, IT support, computer repair, IT services, website design, custom software, IT consulting, business technology solutions">
+        <meta name="author" content="JKagiDesigns LLC">
+        <meta name="robots" content="index, follow">
+        <meta name="language" content="en-US">
+
+        <!-- Open Graph Meta Tags -->
+        <meta property="og:title" content="JKagiDesigns LLC - Professional IT Solutions">
+        <meta property="og:description"
+            content="Expert web development, software development, and IT support services. Transparent pricing, 16+ years experience, and professional IT solutions for modern business.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.jkagidesigns.com/">
+        <meta property="og:image" content="https://www.jkagidesigns.com/assets/images/IconOnly_Transparent.png">
+        <meta property="og:site_name" content="JKagiDesigns LLC">
+        <meta property="og:locale" content="en_US">
+
+        <!-- Twitter Card Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="JKagiDesigns LLC - Professional IT Solutions">
+        <meta name="twitter:description"
+            content="Expert web development, software development, and IT support services with transparent pricing and 16+ years experience.">
+        <meta name="twitter:image" content="https://www.jkagidesigns.com/assets/images/IconOnly_Transparent.png">
+
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://www.jkagidesigns.com/">
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="assets/images/IconOnly_Transparent.png">
+        <link rel="apple-touch-icon" href="assets/images/IconOnly_Transparent.png">
+
+        <!-- Structured Data -->
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "JKagiDesigns LLC",
+            "url": "https://www.jkagidesigns.com",
+            "logo": "https://www.jkagidesigns.com/assets/images/IconOnly_Transparent.png",
+            "description": "Professional IT solutions provider specializing in web development, software development, and IT support services",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "123 Business Street, Suite 100",
+                "addressLocality": "New York",
+                "addressRegion": "NY",
+                "postalCode": "10001",
+                "addressCountry": "US"
+            },
+            "contactPoint": {
+                "@type": "ContactPoint",
+                "telephone": "+1-555-123-4567",
+                "contactType": "customer service",
+                "email": "info@jkagidesigns.com"
+            },
+            "sameAs": [
+                "https://linkedin.com/company/jkagidesigns",
+                "https://twitter.com/jkagidesigns"
+            ]
+        }
+        </script>
+
         <link rel="stylesheet" href="styles.css">
     </head>
 
