--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pricing - JKagiDesigns LLC</title>
+        <title>Pricing Plans - Transparent IT Service Pricing | JKagiDesigns LLC</title>
+
+        <!-- SEO Meta Tags -->
+        <meta name="description"
+            content="Transparent pricing for web development, software development, and IT support services. Starting from $49.99 for computer services, $499 for websites, and $299/year membership with 20% savings.">
+        <meta name="keywords"
+            content="IT service pricing, web development cost, software development pricing, computer repair prices, IT support membership, transparent pricing, affordable IT services">
+        <meta name="author" content="JKagiDesigns LLC">
+        <meta name="robots" content="index, follow">
+
+        <!-- Open Graph Meta Tags -->
+        <meta property="og:title" content="IT Service Pricing - JKagiDesigns LLC">
+        <meta property="og:description"
+            content="Transparent pricing for all IT services. Web development from $499, software development from $4,999, computer services from $49.99, and membership savings up to 20%.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.jkagidesigns.com/pricing.html">
+        <meta property="og:image" content="https://www.jkagidesigns.com/assets/images/IconOnly_Transparent.png">
+
+        <!-- Twitter Card Meta Tags -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="IT Service Pricing - JKagiDesigns LLC">
+        <meta name="twitter:description"
+            content="Transparent pricing for all IT services. Web development, software development, computer support, and membership options.">
+
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://www.jkagidesigns.com/pricing.html">
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="assets/images/IconOnly_Transparent.png">
+
         <link rel="stylesheet" href="styles.css">
     </head>
 
