--- a/rss.html
+++ b/rss.html
@@ -4,7 +4,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>News Feed - JKagiDesigns LLC</title>
+        <title>News Feed - Latest IT Industry Updates | JKagiDesigns LLC</title>
+
+        <!-- SEO Meta Tags -->
+        <meta name="description"
+            content="Stay updated with the latest IT industry news, technology trends, and insights from JKagiDesigns LLC. Get expert perspectives on web development, software development, and IT support.">
+        <meta name="keywords"
+            content="IT news, technology updates, web development news, software development trends, IT industry insights, technology blog">
+        <meta name="author" content="JKagiDesigns LLC">
+        <meta name="robots" content="index, follow">
+
+        <!-- Open Graph Meta Tags -->
+        <meta property="og:title" content="IT News Feed - JKagiDesigns LLC">
+        <meta property="og:description"
+            content="Latest IT industry updates, technology trends, and expert insights from JKagiDesigns LLC.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.jkagidesigns.com/rss.html">
+        <meta property="og:image" content="https://www.jkagidesigns.com/assets/images/IconOnly_Transparent.png">
+
+        <!-- Twitter Card Meta Tags -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="IT News Feed - JKagiDesigns LLC">
+        <meta name="twitter:description"
+            content="Latest IT industry updates and technology trends from JKagiDesigns LLC.">
+
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://www.jkagidesigns.com/rss.html">
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="assets/images/IconOnly_Transparent.png">
+
         <link rel="stylesheet" href="styles.css">
     </head>
 
