--- a/services.html
+++ b/services.html
@@ -4,7 +4,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Services - JKagiDesigns LLC</title>
+        <title>IT Services - Web Development, Software Development & Computer Support | JKagiDesigns LLC</title>
+
+        <!-- SEO Meta Tags -->
+        <meta name="description"
+            content="Comprehensive IT services including web development, custom software development, computer repair, networking, and IT support. Professional technology solutions for businesses and individuals.">
+        <meta name="keywords"
+            content="IT services, web development services, software development, computer repair, IT support, networking services, technology consulting, business IT solutions">
+        <meta name="author" content="JKagiDesigns LLC">
+        <meta name="robots" content="index, follow">
+
+        <!-- Open Graph Meta Tags -->
+        <meta property="og:title" content="IT Services - JKagiDesigns LLC">
+        <meta property="og:description"
+            content="Professional IT services including web development, software development, computer repair, and IT support. Expert technology solutions for your business needs.">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.jkagidesigns.com/services.html">
+        <meta property="og:image" content="https://www.jkagidesigns.com/assets/images/IconOnly_Transparent.png">
+
+        <!-- Twitter Card Meta Tags -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="IT Services - JKagiDesigns LLC">
+        <meta name="twitter:description"
+            content="Professional IT services including web development, software development, computer repair, and IT support.">
+
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://www.jkagidesigns.com/services.html">
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="assets/images/IconOnly_Transparent.png">
+
         <link rel="stylesheet" href="styles.css">
     </head>
 
