--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             "description": "Professional IT solutions provider specializing in web development, software development, and IT support services",
             "address": {
                 "@type": "PostalAddress",
-                "streetAddress": "123 Business Street, Suite 100",
+                "streetAddress": "146 Lake St, ",
                 "addressLocality": "New York",
                 "addressRegion": "NY",
                 "postalCode": "10001",
