--- a/contact.html
+++ b/contact.html
@@ -166,9 +166,8 @@
                             <div class="info-icon">📍</div>
                             <div class="info-content">
                                 <h4>Address</h4>
-                                <p>123 Business Street</p>
-                                <p>Suite 100</p>
-                                <p>New York, NY 10001</p>
+                                <p>146 Lake St</p>
+                                <p>Kingston, MA 02364</p>
                             </div>
                         </div>
 
@@ -177,7 +176,7 @@
                             <div class="info-content">
                                 <h4>Business Hours</h4>
                                 <p>Monday - Friday: 9:00 AM - 6:00 PM</p>
-                                <p>Saturday: 10:00 AM - 4:00 PM</p>
+                                <p>Saturday: Closed</p>
                                 <p>Sunday: Closed</p>
                             </div>
                         </div>
@@ -192,13 +191,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- Map Section (Placeholder) -->
-        <section class="map-section">
-            <div class="map-placeholder">
-                <p>📍 Map Location</p>
             </div>
         </section>
 
