adding simply_analytics script tags

--- a/404.html
+++ b/404.html
@@ -9,6 +9,21 @@
             content="Sorry, the page you're looking for could not be found. Visit our homepage for IT services, web development, and software solutions.">
         <meta name="robots" content="noindex, nofollow">
         <link rel="stylesheet" href="styles.css">
+
+
+        <!-- Simply Analytics Tracking Code -->
+        <script>
+            (function () {
+                var script = document.createElement('script');
+                script.src = 'https://analytics.jkagidesigns.com/tracking.js';
+                script.async = true;
+                script.defer = true;
+                script.setAttribute('data-website-id', '49379aa6-1254-4d9a-baf8-a0e2a26028f1');
+                script.setAttribute('data-api-url', 'https://analytics.jkagidesigns.com');
+                document.head.appendChild(script);
+            })();
+        </script>
+
     </head>
 
     <body>
