--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,9 @@
     <meta name="twitter:description"
       content="Get in touch for professional IT support, web development, and software services. Free consultation available." />
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/cec77beb4b.js" crossorigin="anonymous"></script>
+
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.jkagidesigns.com/contact.html" />
 
@@ -210,9 +213,21 @@
             <div class="social-links">
               <h4>Follow Us</h4>
               <div class="social-icons">
-                <a href="#" class="social-icon">LinkedIn</a>
-                <a href="#" class="social-icon">Twitter</a>
-                <a href="#" class="social-icon">GitHub</a>
+                <a href="http://www.linkedin.com/in/joshua-kagiwada-a7606817" class="social-icon">
+                  <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="https://x.com/jkagidesigns" class="social-icon">
+                  <i class="fab fa-x-twitter"></i> Twitter
+                </a>
+                <a href="https://github.com/jkagidesignseng" class="social-icon">
+                  <i class="fab fa-github"></i> GitHub
+                </a>
+                <a href="https://www.youtube.com/@JKagiDesigns" class="social-icon">
+                  <i class="fab fa-youtube"></i> Youtube
+                </a>
+                <a href="https://www.instagram.com/jkagidesigns/" class="social-icon">
+                  <i class="fab fa-instagram"></i> Instagram
+                </a>
               </div>
             </div>
           </div>
