updating script tag

--- a/services.html
+++ b/services.html
@@ -36,17 +36,8 @@
 
 
     <!-- Simply Analytics Tracking Code -->
-    <script>
-      (function () {
-        var script = document.createElement('script');
-        script.src = 'https://analytics.jkagidesigns.com/tracking.js';
-        script.async = true;
-        script.defer = true;
-        script.setAttribute('data-website-id', '49379aa6-1254-4d9a-baf8-a0e2a26028f1');
-        script.setAttribute('data-api-url', 'https://analytics.jkagidesigns.com');
-        document.head.appendChild(script);
-      })();
-    </script>
+    <script src="https://analytics.jkagidesigns.com/tracking.js"
+      data-website-id="edb73921-6552-492b-9abe-02e29988efbe"></script>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/images/IconOnly_Transparent.png" />
