--- a/index.html
+++ b/index.html
@@ -73,17 +73,8 @@
     </script>
 
     <!-- Simply Analytics Tracking Code -->
-    <script>
-      (function () {
-        var script = document.createElement('script');
-        script.src = 'https://analytics.jkagidesigns.com/tracking.js';
-        script.async = true;
-        script.defer = true;
-        script.setAttribute('data-website-id', '49379aa6-1254-4d9a-baf8-a0e2a26028f1');
-        script.setAttribute('data-api-url', 'https://analytics.jkagidesigns.com');
-        document.head.appendChild(script);
-      })();
-    </script>
+    <script src="https://analytics.jkagidesigns.com/tracking.js"
+      data-website-id="edb73921-6552-492b-9abe-02e29988efbe"></script>
 
     <link rel="stylesheet" href="styles.css" />
   </head>
